# DRSim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
DRSimLib/: CMakeLists.txt
DRSimLib/agents/: TripRequestManager.cpp  Vehicle.cpp  VehicleManager.cpp
DRSimLib/core/: Constants.h  Engine.cpp  Simulation.cpp  TimeProvider.cpp
DRSimLib/events/: ArcEndEvent.cpp  ArcEndEvent.h  Event.cpp  GpsEvent.cpp  GpsEvent.h  RepositioningArrivalEvent.cpp  RepositioningArrivalEvent.h  RepositioningUpdateEvent.cpp  RepositioningUpdateEvent.h  ServiceEndEvent.cpp  ServiceEndEvent.h  ServiceStartEvent.cpp  ServiceStartEvent.h  StartupFinishEvent.cpp  StartupFinishEvent.h  TourStopArrivalEvent.cpp  TourStopArrivalEvent.h  TourUpdateEvent.cpp  TourUpdateEvent.h  TripRequestEvent.cpp  TripRequestEvent.h  VehicleCreationEvent.cpp  VehicleCreationEvent.h  VehicleRemovalEvent.cpp  VehicleRemovalEvent.h
DRSimLib/include/drsim/: Engine.h  Event.h  EventComparator.h  PlanningServiceInterface.h  PointLatLon.h  RequestLogEntry.h  RequestStats.h  Route.h  RouteArc.h  RoutingEngineInterface.h  Scenario.h  Simulation.h  SimulationLog.h  SimulationStats.h  TimeObserver.h  TimeProvider.h  TourStop.h  TripRequestData.h  TripRequestManager.h  Vehicle.h  VehicleData.h  VehicleManager.h  VehicleMovementLogEntry.h  VehicleState.h  VehicleStateLogEntry.h  VehicleStats.h
DRSimLib/log/: SimulationLog.cpp  VehicleMovementLogEntry.cpp  VehicleStateLogEntry.cpp
DRSimLib/models/: PointLatLon.cpp  Route.cpp  RouteArc.cpp  Scenario.cpp  TourStop.cpp  TripRequestData.cpp  VehicleData.cpp
DRSimLib/stats/: HistogramData.cpp  HistogramData.h  RequestLogEntry.cpp  RequestStats.cpp  SimulationStats.cpp  VehicleMovementLogEntry.cpp  VehicleOccupationData.cpp  VehicleOccupationData.h  VehicleStateLogEntry.cpp  VehicleStats.cpp
DRSimLib/utility/: TimeUtil.h
DRSimTest/: CMakeLists.txt  EngineTest.cpp  TripRequestManagerTest.cpp  VehicleManagerTest.cpp  VehicleTest.cpp
DRSimTest/utility/: EuclideanRouter.h  MockEvent.h  MockPlanningService.h
