add_library(DRSimLib  
"agents/TripRequestManager.cpp" 
"agents/Vehicle.cpp" 
"agents/VehicleManager.cpp" 

"core/Constants.h" 
"core/Engine.cpp" 
"core/Simulation.cpp" 
"core/TimeProvider.cpp" 

"events/ArcEndEvent.h" 
"events/ArcEndEvent.cpp" 
"events/Event.cpp" 
"events/GpsEvent.h" 
"events/GpsEvent.cpp" 
"events/RepositioningArrivalEvent.h" 
"events/RepositioningArrivalEvent.cpp" 
"events/RepositioningUpdateEvent.h" 
"events/RepositioningUpdateEvent.cpp" 
"events/ServiceEndEvent.h" 
"events/ServiceEndEvent.cpp" 
"events/ServiceStartEvent.h" 
"events/ServiceStartEvent.cpp"
"events/StartupFinishEvent.h" 
"events/StartupFinishEvent.cpp" 
"events/TourStopArrivalEvent.h" 
"events/TourStopArrivalEvent.cpp" 
"events/TourUpdateEvent.h"
"events/TourUpdateEvent.cpp" 
"events/TripRequestEvent.h" 
"events/TripRequestEvent.cpp" 
"events/VehicleCreationEvent.h" 
"events/VehicleCreationEvent.cpp" 
"events/VehicleRemovalEvent.h" 
"events/VehicleRemovalEvent.cpp"

"include/drsim/Engine.h" 
"include/drsim/Event.h" 
"include/drsim/EventComparator.h"
"include/drsim/PlanningServiceInterface.h" 
"include/drsim/PointLatLon.h" 
"include/drsim/RequestLogEntry.h" 
"include/drsim/Route.h" 
"include/drsim/RouteArc.h"  
"include/drsim/RoutingEngineInterface.h" 
"include/drsim/Scenario.h" 
"include/drsim/Simulation.h" 
"include/drsim/SimulationLog.h" 
"include/drsim/TimeObserver.h" 
"include/drsim/TimeProvider.h" 
"include/drsim/TourStop.h" 
"include/drsim/TripRequestData.h" 
"include/drsim/TripRequestManager.h"   
"include/drsim/Vehicle.h" 
"include/drsim/VehicleData.h"  
"include/drsim/VehicleManager.h" 
"include/drsim/VehicleMovementLogEntry.h" 
"include/drsim/VehicleState.h" 
"include/drsim/VehicleStateLogEntry.h" 

"log/RequestLogEntry.cpp"  
"log/SimulationLog.cpp" 
"log/VehicleMovementLogEntry.cpp" 
"log/VehicleStateLogEntry.cpp" 

"models/PointLatLon.cpp" 
"models/Route.cpp" 
"models/RouteArc.cpp"   
"models/Scenario.cpp" 
"models/TourStop.cpp" 
"models/TripRequestData.cpp" 
"models/VehicleData.cpp" 
)

find_package(Boost 1.75 REQUIRED COMPONENTS date_time)
find_package(spdlog REQUIRED)
find_package(nlohmann_json REQUIRED)

target_link_libraries(DRSimLib PRIVATE Boost::date_time spdlog::spdlog nlohmann_json::nlohmann_json)
target_include_directories(DRSimLib INTERFACE ./include/)
target_include_directories(DRSimLib PRIVATE .)
